test/errors/nonlocal___class___missing.py
def f():
    nonlocal __class__
